ECOPROJECT-4563 | fix: align cluster name and cluster id with collected data
The rightsizing apis (specifically the cluster_rightsizing) use the collected cluster name as the cluster id.

Pending a fix on the planner size, that will populate the vcluster table, this fix will use the data there (cluster_id*cluster_name) to correct the API responses
